updating js hw for week 4

--- a/Javascript/homework/responses/4.1-page-setup.md
+++ b/Javascript/homework/responses/4.1-page-setup.md
@@ -1,10 +1,10 @@
-### Week 4 - Toggling between digital and analog clocks and incoporating advanced features
+# Week 4 - Toggling between digital and analog clocks and incoporating advanced features
 
 *For the final assignment, students will integrate all previous assignments into a single interface and add some bells and whistles.*
 
-#### Task 1: Create a new page with an analog and a digital clock
+## Task 1: Create a new page with an analog and a digital clock
 
-Your final assignment is going to merge everything you've created so far onto a single webpage, and allow the user to choose between a digital clock and analog clock. 
+*Your final assignment is going to merge everything you've created so far onto a single webpage, and allow the user to choose between a digital clock and analog clock. This first task will help you get all of your code in one place.*
 
 First off, copy your files from last week into your week 4 folder.  Next, add a div tag below your clock div (below the `</div>` tied to `<div class="clock">` ).  Make sure to give this tag a unique id attribute, my line of code looks like `<div class="digital" id="digital clock"></div>`.
 
@@ -23,3 +23,11 @@ Your page should now look something like this:
 ![Screen Shot 2021-01-17 at 9.18.06 PM](/Users/danielleanzelone/Library/Application Support/typora-user-images/Screen Shot 2021-01-17 at 9.18.06 PM.png)
 
 Feel free to size down the digital clock so that it doesn't mess up your layout when you resize your screen.
+
+#### Open a pull request for your code
+
+Once again, be sure create a new branch, titled `[your GitHub username]-[week]-[task number]`, for your task. For example, my username is `danzelo1` so my branch would be called `danzelo1-4-1` for this task.
+
+After you've created your branch, commit your code to this branch and open a pull request to merge with your main branch.  Be sure to title and comment your pull request appropriately.
+
+As long as there are no conflicts with the base branch, you can now merge your pull request with your main branch. From here, click on "Issues" on the top left of your screen, below the name of your repository, and click on the week (week 4). A new comment should have appeared for your next task where you'll find the instructions for task 2.
