--- a/Javascript/homework/responses/4.3-more-js-functions.md
+++ b/Javascript/homework/responses/4.3-more-js-functions.md
@@ -1,10 +1,6 @@
-### Week 4 - Toggling between digital and analog clocks and incoporating advanced features
+## Task 3: Toggling between a digital and an analog clock
 
-*For the final assignment, students will integrate all previous assignments into a single interface and add some bells and whistles.*
-
-#### Task 3: Toggling between a digital and an analog clock
-
-Now that we have the page all set up, all that's left to do is to get our code to do what the webpage says!
+*Now that we have the page all set up, all that's left to do is to get our code to do what the webpage says! This task will go over some JavaScript functions using methods you've learned previously.*
 
 In your JavaScript file, define two functions - one called `setDigital()` and another called `setAnalog()` .  Inside of each of these functions, use `document.getElementById()` to define 2 variables that select the analog clock and the digital clock.  So, your code for the digital clock would look like this:
 
@@ -31,3 +27,11 @@ And if you click the "Digital" button, it will look like this:
 ![Screen Shot 2021-01-17 at 10.55.26 PM](/Users/danielleanzelone/Library/Application Support/typora-user-images/Screen Shot 2021-01-17 at 10.55.26 PM.png)
 
 However, you may notice that when you first load your page, both clocks appear.  To fix this, add the `checked` attribute to the input field tag for the analog clock's radio button so that this button will be selected when the field loads.  Then, in your JavaScript file, call the `setAnalog()` function after it's defined.
+
+#### Open a pull request for your code
+
+Once again, be sure create a new branch, titled `[your GitHub username]-[week]-[task number]`, for your task.
+
+After you've created your branch, commit your code to this branch and open a pull request to merge with your main branch.  Be sure to title and comment your pull request appropriately.
+
+As long as there are no conflicts with the base branch, you can now merge your pull request with your main branch. From here, click on "Issues" on the top left of your screen, below the name of your repository, and click on the week (week 4). A new comment should have appeared for your next task where you'll find the instructions for your fourth and final task.
