--- a/Javascript/homework/responses/4.2-more-buttons.md
+++ b/Javascript/homework/responses/4.2-more-buttons.md
@@ -1,10 +1,6 @@
-### Week 4 - Toggling between digital and analog clocks and incoporating advanced features
+## Task 2: Adding radio buttons for clock preferences
 
-*For the final assignment, students will integrate all previous assignments into a single interface and add some bells and whistles.*
-
-#### Task 2: Adding radio buttons for clock preferences
-
-Next, we're going to create a set of radio buttons that allow a user to choose if they’d like to see the time on an analog clock or on a digital clock.
+*Next, we're going to create a set of radio buttons that allow a user to choose if they’d like to see the time on an analog clock or on a digital clock. This task will demonstrate a different approach to radio buttons.*
 
 First, open another form tag directly below the one you have for the timezone selector.  Similar to how you set up the timezone buttons, open a div tag with a unique class (I named mine "view") and insert 2 radio buttons. Make sure these radio buttons share the same `name` attribute and have unique `value` and `id` attributes.
 
@@ -15,3 +11,11 @@ After this step, your page should look like this:
 ![Screen Shot 2021-01-17 at 9.31.52 PM](/Users/danielleanzelone/Library/Application Support/typora-user-images/Screen Shot 2021-01-17 at 9.31.52 PM.png)
 
 At this point, you can customize the appearance of these two radio buttons in your CSS file by defining a block that selects all items in your "view" class.  I suggest adding some margins and padding so that items don't look so crowded.
+
+#### Open a pull request for your code
+
+Once again, be sure create a new branch, titled `[your GitHub username]-[week]-[task number]`, for your task.
+
+After you've created your branch, commit your code to this branch and open a pull request to merge with your main branch.  Be sure to title and comment your pull request appropriately.
+
+As long as there are no conflicts with the base branch, you can now merge your pull request with your main branch. From here, click on "Issues" on the top left of your screen, below the name of your repository, and click on the week (week 4). A new comment should have appeared for your next task where you'll find the instructions for task 3.
