--- a/Javascript/homework/responses/4.4-customization.md
+++ b/Javascript/homework/responses/4.4-customization.md
@@ -1,6 +1,6 @@
 ## Task 4: Adding the bells and whistles
 
-*Your final task will be to use your creativity to add anything you'd like to your clock webpage.*
+#### Your final task will be to use your creativity to add anything you'd like to your clock webpage
 
 Now that your page incorporates all of your existing work and allows the user to toggle between a digital and analog clock, your task is almost complete. 
 
