--- a/Javascript/homework/responses/4.2-more-buttons.md
+++ b/Javascript/homework/responses/4.2-more-buttons.md
@@ -1,6 +1,6 @@
 ## Task 2: Adding radio buttons for clock preferences
 
-*Next, we're going to create a set of radio buttons that allow a user to choose if they’d like to see the time on an analog clock or on a digital clock. This task will demonstrate a different approach to radio buttons.*
+#### Next, we're going to create a set of radio buttons that allow a user to choose if they’d like to see the time on an analog clock or on a digital clock. This task will demonstrate a different approach to radio buttons.
 
 First, open another form tag directly below the one you have for the timezone selector.  Similar to how you set up the timezone buttons, open a div tag with a unique class (I named mine "view") and insert 2 radio buttons. Make sure these radio buttons share the same `name` attribute and have unique `value` and `id` attributes.
 
@@ -8,7 +8,7 @@ These two radio buttons should have the user input whether they'd like to see th
 
 After this step, your page should look like this:
 
-![Screen Shot 2021-01-17 at 9.31.52 PM](/Users/danielleanzelone/Library/Application Support/typora-user-images/Screen Shot 2021-01-17 at 9.31.52 PM.png)
+![Screen Shot 2021-01-17 at 9.31.52 PM](../../images/Screen Shot 2021-01-17 at 9.31.52 PM.png)
 
 At this point, you can customize the appearance of these two radio buttons in your CSS file by defining a block that selects all items in your "view" class.  I suggest adding some margins and padding so that items don't look so crowded.
 
