--- a/Javascript/homework/responses/4.3-more-js-functions.md
+++ b/Javascript/homework/responses/4.3-more-js-functions.md
@@ -1,6 +1,6 @@
 ## Task 3: Toggling between a digital and an analog clock
 
-*Now that we have the page all set up, all that's left to do is to get our code to do what the webpage says! This task will go over some JavaScript functions using methods you've learned previously.*
+#### Now that we have the page all set up, all that's left to do is to get our code to do what the webpage says! This task will go over some JavaScript functions using methods you've learned previously.
 
 In your JavaScript file, define two functions - one called `setDigital()` and another called `setAnalog()` .  Inside of each of these functions, use `document.getElementById()` to define 2 variables that select the analog clock and the digital clock.  So, your code for the digital clock would look like this:
 
@@ -20,11 +20,11 @@ Finally, we just have to link these functions to the radio buttons.  Back in you
 
 Now, if you click the "Analog" button, your screen should look like this:
 
-![Screen Shot 2021-01-17 at 10.55.15 PM](/Users/danielleanzelone/Library/Application Support/typora-user-images/Screen Shot 2021-01-17 at 10.55.15 PM.png)
+![Screen Shot 2021-01-17 at 10.55.15 PM](../../images/Screen Shot 2021-01-17 at 10.55.15 PM.png)
 
 And if you click the "Digital" button, it will look like this:
 
-![Screen Shot 2021-01-17 at 10.55.26 PM](/Users/danielleanzelone/Library/Application Support/typora-user-images/Screen Shot 2021-01-17 at 10.55.26 PM.png)
+![Screen Shot 2021-01-17 at 10.55.26 PM](../../images/Screen Shot 2021-01-17 at 10.55.26 PM.png)
 
 However, you may notice that when you first load your page, both clocks appear.  To fix this, add the `checked` attribute to the input field tag for the analog clock's radio button so that this button will be selected when the field loads.  Then, in your JavaScript file, call the `setAnalog()` function after it's defined.
 
