fixing header and images

--- a/Javascript/homework/responses/3.1-integrating-code.md
+++ b/Javascript/homework/responses/3.1-integrating-code.md
@@ -1,10 +1,6 @@
-# Week 3 - Constructing an analog clock using HTML, JS, and CSS
-
-*Students will now use the knowledge and experience they've gained from building a digital clock to code a live analog clock that changes based on the user's selected timezone.*
-
 ## Task 1: Gathering your existing code
 
-*This step will simply guide you through starting a JavaScript file and copying your code from last week's assignment.*
+#### This step will simply guide you through starting a JavaScript file and copying your code from last week's assignment.
 
 Open new css and html in visual studio code in your week 3 folder.  This week will involve a little more JavaScript code, so you may want to make a separate JS file this time.  You can save it as "script.js" and link this file to your HTML file by adding the following line in your head, right below your CSS file link:
 
@@ -16,7 +12,7 @@ You can also copy your HTML from last week, but make sure to remove the JavaScri
 
 If you've copied and filtered all your code correctly, this is what your page should look like:
 
-![Screen Shot 2021-01-15 at 8.11.26 PM](/Users/danielleanzelone/Library/Application Support/typora-user-images/Screen Shot 2021-01-15 at 8.11.26 PM.png)
+![Screen Shot 2021-01-15 at 8.11.26 PM](../../images/Screen Shot 2021-01-15 at 8.11.26 PM.png)
 
 #### Open a pull request for your code
 
