--- a/Javascript/homework/responses/3.3-clock-digits.md
+++ b/Javascript/homework/responses/3.3-clock-digits.md
@@ -1,6 +1,6 @@
 ## Task 3: Adding numbers to your clock
 
-*We'll use HTML and CSS in this step to print numbers on your clock and get them ready for positioning.*
+#### We'll use HTML and CSS in this step to print numbers on your clock and get them ready for positioning.
 
 Next, we need to set up the numbers on our clock. Go back to the HTML document and define divs for numbers 1-12 inside the clock div tags. Name the classes for these divs "number number[digit]" so for the first digit, the tag would look like: 
 
@@ -18,7 +18,7 @@ Set the `text-align` to `center` so that the numbers stay centered at the top of
 
 At this point your clock should look something like this:
 
-![Screen Shot 2021-01-16 at 2.16.29 AM](/Users/danielleanzelone/Library/Application Support/typora-user-images/Screen Shot 2021-01-16 at 2.16.29 AM.png)
+![Screen Shot 2021-01-16 at 2.16.29 AM](../../images/Screen Shot 2021-01-16 at 2.16.29 AM.png)
 
 You'll notice that the numbers overlap in one spot and you can't read them.  In the next step we'll use rotation tools to change the positioning of each digit on the clock.
 
