--- a/Javascript/homework/responses/3.4-rotation.md
+++ b/Javascript/homework/responses/3.4-rotation.md
@@ -1,6 +1,6 @@
 ## Task 4: Using rotation to align the numbers on your clock
 
-*In this task, we'll walk you through how to use variables in CSS, as well as how to use a built-in CSS function to rotate your numbers so that they're in the right position on your clock.*
+#### In this task, we'll walk you through how to use variables in CSS, as well as how to use a built-in CSS function to rotate your numbers so that they're in the right position on your clock.
 
 To move the digits to their respective positions on the clock, we could individually position them using the `top` and `left` attributes, but this would be a very tedious task.  Instead, we're going to use a trick to change the position of each digit using the `rotate()` tool in the `transform` attribue.
 
@@ -28,7 +28,7 @@ If you refresh your HTML page, you'll see there's no need to change anything for
 
 Now, your clock should look something like this:
 
-![Screen Shot 2021-01-16 at 10.43.07 PM](/Users/danielleanzelone/Library/Application Support/typora-user-images/Screen Shot 2021-01-16 at 10.43.07 PM.png)
+![Screen Shot 2021-01-16 at 10.43.07 PM](../../images/Screen Shot 2021-01-16 at 10.43.07 PM.png)
 
 *Don't forget to delete the border from `.clock .number` after this step if you included it earlier.*
 
