--- a/Javascript/homework/responses/3.5-clock-hands.md
+++ b/Javascript/homework/responses/3.5-clock-hands.md
@@ -1,6 +1,6 @@
 ## Task 5: Designing the hands of your clock
 
-*We'll go over some more CSS tricks in this step to get the hands of your clock in position for time-telling.*
+#### We'll go over some more CSS tricks in this step to get the hands of your clock in position for time-telling.
 
 Within your clock div you're going to include three more divsions. - these will represent the hands on our clock.  For each div, set the class to "hand [type of hand]" and set the data-* attribute to `data-[type of hand]-hand`.  For example, the div tag for the hour hand would look like:
 
@@ -10,7 +10,9 @@ Repeat this for the minute hand and the second hand.
 
 Though this div-defining process seems complicated, it will greatly simplify things when we design our clock hands in the CSS file.
 
-We'll want all three of our hands to have some similar attributes, so in your css file, define a block that selects all items within the clock class with "hand" in their class.  The definition of this field will be similar to the way we defined the first number section in the last task, so your code should look like this:
+We'll want all three of our hands to have some similar attributes, so in your css file, define a block that selects all items within the clock class with "hand" in their class.  
+
+The definition of this field will be similar to the way we defined the first number section in the last task, so your code should look like this:
 
 `.clock .hand { }`
 
@@ -18,7 +20,7 @@ Inside of this block, set the `bottom` and `left` attributes to 50%, which will 
 
 We'll change this later, but just so you get an idea of what we're doing, set your `height` and `width` to some arbitrary values and your background color to black.  I set my height to 40% and my width to 10px and this is how my clock looks at this point in the code.
 
-![Screen Shot 2021-01-16 at 11.24.27 PM](/Users/danielleanzelone/Library/Application Support/typora-user-images/Screen Shot 2021-01-16 at 11.24.27 PM.png)
+![Screen Shot 2021-01-16 at 11.24.27 PM](../../images/Screen Shot 2021-01-16 at 11.24.27 PM.png)
 
 As you can see, the hand is slightly off center, which is the same issue we had earlier with the circle in the center of the clock.  Since we just want to move the hand to the left, we'll use the same trick as we did earlier, but this time the y-coordinate in the translate function will be 0, like so:
 
@@ -36,7 +38,7 @@ In each of these blocks, customize the hands so that the seconds hand is the lon
 
 Now, your clock should look something like this:
 
-![Screen Shot 2021-01-16 at 11.59.41 PM](/Users/danielleanzelone/Library/Application Support/typora-user-images/Screen Shot 2021-01-16 at 11.59.41 PM.png)
+![Screen Shot 2021-01-16 at 11.59.41 PM](../../images/Screen Shot 2021-01-16 at 11.59.41 PM.png)
 
 To make sure that the second hand is always on top set it's `z-index` attribute to 12.  Similarly, we'll want the hour hand to always be on the bottom and the minute hand in the middle so set their `z-index` attributes to 10 and 11 respectively.  We'll also want the small circle in the center of the clock to always be on top of all of the hands to hide the overlap so we can set the `z-index` in `clock::after` to 100.  This attribute defines the order in which items will appear on the z-axis, so items with a higher z-index will appear to sit on top of items with a lower z-index.
 
