--- a/Javascript/homework/responses/3.6-moving-hands.md
+++ b/Javascript/homework/responses/3.6-moving-hands.md
@@ -1,6 +1,6 @@
 ## Task 6: Getting your hands to move
 
-*We'll add some final touches to your CSS file so that your hands rotate correctly and then get to work on your JavaScript so that your clock can do what clocks do.*
+#### We'll add some final touches to your CSS file so that your hands rotate correctly and then get to work on your JavaScript so that your clock can do what clocks do.
 
 In order to get our hands to be able to rotate around the clock, we have to use a trick similar to the one we used for rotating the numbers on the clock.  In your CSS file, define a variable `--rotation` in your `.clock .hand` block and initialize it to 0.  This will serve as a variable to hold the number of degrees our hand will be rotated at any given second. 
 
@@ -10,7 +10,7 @@ To actually utilize this variable and make our hand rotate, add `rotate()` as a 
 
 Now, if you set `--rotation` to 30 to test out this rotate tool, you'll see that the hand rotates with the center as its axis rather than its bottom end:
 
-![Screen Shot 2021-01-17 at 2.00.40 AM](/Users/danielleanzelone/Library/Application Support/typora-user-images/Screen Shot 2021-01-17 at 2.00.40 AM.png)
+![Screen Shot 2021-01-17 at 2.00.40 AM](../../images/Screen Shot 2021-01-17 at 2.00.40 AM.png)
 
 To fix this, use the `transform-origin` attribute to change the position from which the hand is rotated to `bottom` like so:
 
@@ -18,7 +18,7 @@ To fix this, use the `transform-origin` attribute to change the position from wh
 
 Now, your clock should look like this:
 
-![Screen Shot 2021-01-17 at 2.04.43 AM](/Users/danielleanzelone/Library/Application Support/typora-user-images/Screen Shot 2021-01-17 at 2.04.43 AM.png)
+![Screen Shot 2021-01-17 at 2.04.43 AM](../../images/Screen Shot 2021-01-17 at 2.04.43 AM.png)
 
 Now that our hands are all set up, we can finally move onto the JavaScript portion of the code.
 
