--- a/Javascript/homework/responses/3.2-clock-styling.md
+++ b/Javascript/homework/responses/3.2-clock-styling.md
@@ -1,6 +1,6 @@
 ## Task 2: Building the background of your clock
 
-*In this task, we'll cover some tips and tricks to get your clock shaped and positioned correctly on your page.*
+#### In this task, we'll cover some tips and tricks to get your clock shaped and positioned correctly on your page.
 
 Inside of your HTML file, make sure you have a div with its class set to `"clock"`.  This div should be defined after your form ends, but still inside the body tags.
 
@@ -10,7 +10,7 @@ First, you'll want to set the height and width - it doesn't matter what you set 
 
 If you load your HTML at this point, it should look something like this (give or take depending on what you've set your attributes to):
 
-![Screen Shot 2021-01-16 at 1.01.26 AM](/Users/danielleanzelone/Library/Application Support/typora-user-images/Screen Shot 2021-01-16 at 1.01.26 AM.png)
+![Screen Shot 2021-01-16 at 1.01.26 AM](../../images/Screen Shot 2021-01-16 at 1.01.26 AM.png)
 
 Since we want our clock to be round, we'll set the `border-radius` in the `.clock` section to 50% - this will completely round the edges of the square, thus making it a circle. You may also want to add a border to the clock to make it look more familiar.
 
@@ -28,7 +28,7 @@ You'll also want to set the height and width to be a small square - I've set min
 
 Next, set the top to 50% and the left to 50% to move the small circle to the center of the clock. 
 
-If you load your page now, you'll notice that the small circle is slightly off center:![Screen Shot 2021-01-16 at 1.59.41 AM](/Users/danielleanzelone/Library/Application Support/typora-user-images/Screen Shot 2021-01-16 at 1.59.41 AM.png)
+If you load your page now, you'll notice that the small circle is slightly off center:![Screen Shot 2021-01-16 at 1.59.41 AM](../../images/Screen Shot 2021-01-16 at 1.59.41 AM.png)
 
 This is because the object is aligned with its position relative to the left and top sides, not its center.  To fix this, enter the following line into the `clock::after` block, below where you set the top and left positions:
 
@@ -36,7 +36,7 @@ This is because the object is aligned with its position relative to the left and
 
 This will translate the item 50% of its width to the left, and 50% of its width upwards.  Now your clock should look like this:
 
-![Screen Shot 2021-01-16 at 2.06.44 AM](/Users/danielleanzelone/Library/Application Support/typora-user-images/Screen Shot 2021-01-16 at 2.06.44 AM.png)
+![Screen Shot 2021-01-16 at 2.06.44 AM](../../images/Screen Shot 2021-01-16 at 2.06.44 AM.png)
 
 #### Open a pull request for your code
 
