--- a/Javascript/homework/responses/2.1-css-linking.md
+++ b/Javascript/homework/responses/2.1-css-linking.md
@@ -1,10 +1,6 @@
-# Week 2 - Designing a digital clock using CSS
-
-*In this week's assignment, students will build off of last weeks work and style their existing webpage to produce a more aesthetically pleasing digital clock.*
-
 ## Task 1: Linking your CSS file
 
-*How to begin a CSS file and link it to your HTML file.*
+#### How to begin a CSS file and link it to your HTML file.
 
 This week, we're going to take the HTML and JavaScript code we wrote last week and style our page using CSS to make it more aesthetically pleasing.  First, copy your index.html file into a new html file in your week 2 homework folder.
 
