--- a/Javascript/homework/responses/2.2-body.md
+++ b/Javascript/homework/responses/2.2-body.md
@@ -1,6 +1,6 @@
 ## Task 2: Styling the body
 
-*In this task, we'll go over how to style the text in your body tag.*
+#### In this task, we'll go over how to style the text in your body tag.
 
 In your CSS file, define a body class and set the display to flex.  This will make sure all elements fit the screen appropriately. Next, use the `justify-content`  and `align-items` attributes to center your items on the y axis and the x axis respectively. You may also want to set the `min-height` to `100vh` so that height of your content will always be relative to the size of the screen.
 
