--- a/Javascript/homework/responses/2.4-form-layout.md
+++ b/Javascript/homework/responses/2.4-form-layout.md
@@ -1,10 +1,10 @@
 ## Task 4: Styling your buttons 
 
-*Now that you've styled your text and your clock, now's time to make any changes to your radio buttons that you'd like.*
+#### Now that you've styled your text and your clock, now's time to make any changes to your radio buttons that you'd like.
 
 Lastly, you'll define a timezone class to style the labels and buttons used for your timezone selector.  Similarly to the way you defined the clock styles using the unique id from the clock div, preceded by a '.', you'll define the radio button style class using whatever class you used to group together your timezone buttons. I grouped my radio buttons and labels in a div with the class set to `"timezone"` so my CSS file looks like this:
 
-![Screen Shot 2021-01-15 at 6.29.34 PM](/Users/danielleanzelone/Library/Application Support/typora-user-images/Screen Shot 2021-01-15 at 6.29.34 PM.png)
+![Screen Shot 2021-01-15 at 6.29.34 PM](../../images/Screen Shot 2021-01-15 at 6.29.34 PM.png)
 
 If you're already satisfied with how your page looks because of how you styled the body, then this part is unnecessary, but I recommend you do some styling here to get a better hang of CSS attributes.
 
