--- a/Javascript/homework/responses/1.3-user-input.md
+++ b/Javascript/homework/responses/1.3-user-input.md
@@ -1,6 +1,6 @@
 ## Task 3: Using JavaScript to read user input
 
-*Now that we've set up the form, we'll use JavaScript to grab the user's input for us to use in our code.*
+#### Now that we've set up the form, we'll use JavaScript to grab the user's input for us to use in our code.
 
 Outside of the form, but still in the body, open the `script` tag with the `type` attribute set to `"text/javascript"`. To open the script tag you would type <script type="">  Inside here, define a function to print the user's selection from the timezone form.  You can do this by looping through the radio buttons and seeing if the `checked` attribute is true.
 
