--- a/Javascript/homework/responses/1.4-date.md
+++ b/Javascript/homework/responses/1.4-date.md
@@ -1,6 +1,6 @@
 ## Task 4: Printing the time with JS
 
-*In this task, we'll show you how to print your local machine's time onto your webpage using some basic JS tools.*
+#### In this task, we'll show you how to print your local machine's time onto your webpage using some basic JS tools.
 
 Next, we will print the time on your local machine onto the webpage with a simple JavaScript function.
 
