--- a/Javascript/homework/responses/1.5-timezone.md
+++ b/Javascript/homework/responses/1.5-timezone.md
@@ -1,6 +1,6 @@
 ## Task 5: Changing your clock based on user input
 
-*Now we'll show you how to write a JavaScript function that takes the user's input from the radio button and prints the time in the timezone they selected.*
+#### Now we'll show you how to write a JavaScript function that takes the user's input from the radio button and prints the time in the timezone they selected.
 
 Finally, let's integrate the functions we wrote to produce a clock that changes given a selected timezone.
 
