--- a/Javascript/homework/responses/1.1-setup.md
+++ b/Javascript/homework/responses/1.1-setup.md
@@ -1,10 +1,6 @@
-# Week 1 - Printing the time using JS and HTML 
-
-*In this assignment, students will gain a thorough understanding of basic HTML syntax as well as JavaScript functions to print out the current time given some user input* 
-
 ## Task 1: Environment setup and starting your first HTML file
 
-*In this task, you'll be setting up your computer to get ready to code.  We'll also show you how to create a simple HTML file.*
+#### In this task, you'll be setting up your computer to get ready to code.  We'll also show you how to create a simple HTML file.
 
 If you have not already set up your environment for this course, be sure to watch the loom video (this is where I'd add a link to the video I'm gonna create about setting up your environment) and download [Microsoft Visual Studio Code](https://code.visualstudio.com/Download) for your machine. 
 
