--- a/Javascript/homework/responses/1.2-buttons.md
+++ b/Javascript/homework/responses/1.2-buttons.md
@@ -1,6 +1,6 @@
 ## Task 2: Getting user input with buttons
 
-*For task 2, we'll go over how to insert a radio button, or an option button, as well as a regular button.*
+#### For task 2, we'll go over how to insert a radio button, or an option button, as well as a regular button.
 
 Next, lets set up a form for a user to select their timezone for the clock we're going to build.  To do this, we'll use radio buttons - these are the type of buttons that you'd associate with a multiple choice question - there are a few different options to select, but, since we only want to show one time, we only want the user to be able to select one of these buttons.
 
