--- a/Javascript/homework/responses/1.2-buttons.md
+++ b/Javascript/homework/responses/1.2-buttons.md
@@ -4,9 +4,15 @@
 
 Next, lets set up a form for a user to select their timezone for the clock we're going to build.  To do this, we'll use radio buttons - these are the type of buttons that you'd associate with a multiple choice question - there are a few different options to select, but, since we only want to show one time, we only want the user to be able to select one of these buttons.
 
-Radio buttons can be defined using the HTML `input` field if you set the `type` attribute to `"radio"`.  In order to let the computer know that these items are in a group, be sure to give each input field the same same `name` attribute (I named mine `"timezone"`). Each item should also have a unique value tag.
+Radio buttons can be defined using the HTML `input` field if you set the `type` attribute to `"radio"`.  
 
-Once you've set up your input fields, feel free to add some labels and breaks to make your form easier to read.  Next, we need to add a submit button.  This can be defined using a `button` tag with the` type` attribute set to `"button"` and `value` attribute set to `"Submit"`.  
+- In order to let the computer know that these items are in a group, be sure to give each input field the same same `name` attribute (I named mine `"timezone"`). 
+- Each item should also have a unique value tag.
+- Once you've set up your input fields, feel free to add some labels and breaks to make your form easier to read. 
+
+Next, we need to add a submit button.  
+
+- This can be defined using a `button` tag with the` type` attribute set to `"button"` and `value` attribute set to `"Submit"`.  
 
 Whenever we want to take in some user input involving input fields and a submit button, we want to make sure to group our relevant code in the `form` tag so that the computer knows what to look for.  With that being said, make sure to surround your code related to the input fields and submit button with a form tag.
 
