--- a/Javascript/homework/responses/1.4-date.md
+++ b/Javascript/homework/responses/1.4-date.md
@@ -4,15 +4,27 @@
 
 Next, we will print the time on your local machine onto the webpage with a simple JavaScript function.
 
-First, define a new function inside your `script` tag, but outside of the function you just wrote for finding the selected radio button.  Define a new variable and set it equal to `new Date()`.  This will grab the current date and time from your local machine.
+First, define a new function inside your `script` tag, but outside of the function you just wrote for finding the selected radio button.  
 
-Next, create variables for the current hour, minute, and second using the respective `Date` functions.  You may also want to define a session variable that keeps track of whether your clock is showing "AM" or "PM" - you can do this using a few simple conditionals.
+- Define a new variable and set it equal to `new Date()`.  This will grab the current date and time from your local machine.
+
+Next, create variables for the current hour, minute, and second using the respective `Date` functions.  
+
+- You may also want to define a session variable that keeps track of whether your clock is showing "AM" or "PM" - you can do this using a few simple conditionals.
 
 Once you've defined your time variables, define a new variable to concatenate the hour, minute, and second variables, each separated by a colon (you can also add your session variable here).
 
-We'll want our clock to be updated every second, so, at the bottom of the function, call the `setTimeout()` function with the name of your clock function and `1000` as parameters.  This will call your function every 1000 ms (or 1 second) that your page is running.
+We'll want our clock to be updated every second, so, at the bottom of the function, call the `setTimeout()` function with the name of your clock function and `1000` as parameters.  
 
-Lastly, to print your clock, add a break and a div tag outside of your form tags.  Give this element a unique tag.  Now, scroll back down to your JavaScript clock function and use the document's `getElementById()` function to print your time variable, just as you did to print the form result in your previous function.
+- This will call your function every 1000 ms (or 1 second) that your page is running.
+
+Lastly, to print your clock, add a break and a div tag outside of your form tags.  
+
+- Give this element a unique tag.  
+
+Now, scroll back down to your JavaScript clock function 
+
+- Use the document's `getElementById()` function to print your time variable, just as you did to print the form result in your previous function.
 
 Now, you should have a working digital clock and a form that prints the item selected!
 
