--- a/Javascript/homework/responses/1.3-user-input.md
+++ b/Javascript/homework/responses/1.3-user-input.md
@@ -2,15 +2,26 @@
 
 #### Now that we've set up the form, we'll use JavaScript to grab the user's input for us to use in our code.
 
-Outside of the form, but still in the body, open the `script` tag with the `type` attribute set to `"text/javascript"`. To open the script tag you would type <script type="">  Inside here, define a function to print the user's selection from the timezone form.  You can do this by looping through the radio buttons and seeing if the `checked` attribute is true.
+Outside of the form, but still in the body, open the `script` tag with the `type` attribute set to `"text/javascript"`. 
 
-Once you find the checked radio button, save it to a variable.  Next, use `document.getElementById().innerHTML` and place the id of the div you defined below the submit button in the parentheses.  Set this line equal to the variable holding the checked radio button to print it onto your webpage.  For example, I set my div's id to `"result"` and named my variable `output` and my code looked like this:
+- To open the script tag you would type `<script type="">`  
+- Inside here, define a function to print the user's selection from the timezone form.  
+  - You can do this by looping through the radio buttons and seeing if the `checked` attribute is true.
 
-`document.getElementById("result").innerHTML = output;`
+Once you find the checked radio button, save it to a variable.  
 
-Finally, you'll want to scroll up to your submit button and add the `onclick` attribute to the `button` tag and set it equal to the name of the function you just defined so that the computer knows to call this function when the submit button is clicked.  My function was named `ValidateForm` and my button tag looks like this:
+- Next, use `document.getElementById().innerHTML`  
 
-`<button type="button" value="Submit" onclick="ValidateForm()"> Submit </button>`
+  - Place the id of the div you defined below the submit button in the parentheses.  
+
+  - Set this line equal to the variable holding the checked radio button to print it onto your webpage.  
+    - For example, I set my div's id to `"result"` and named my variable `output` and my code looked like this:`document.getElementById("result").innerHTML = output;`
+
+Finally, you'll want to scroll up to your submit button 
+
+- Add the `onclick` attribute to the `button` tag and set it equal to the name of the function you just defined
+  - This will let the computer know to call this function when the submit button is clicked.  
+  - My function was named `ValidateForm` and my button tag looks like this:`<button type="button" value="Submit" onclick="ValidateForm()"> Submit </button>`
 
 Now, your page should print out the value of whichever item the user has selected when they click the submit button.
 
