--- a/Javascript/homework/responses/1.5-timezone.md
+++ b/Javascript/homework/responses/1.5-timezone.md
@@ -4,11 +4,17 @@
 
 Finally, let's integrate the functions we wrote to produce a clock that changes given a selected timezone.
 
-First, define a global variable and set it to 0.  This variable will be how we keep track of how many hours we need to change the clock by.
+- First, define a global variable and set it to 0.  
+  - This variable will be how we keep track of how many hours we need to change the clock by.
 
-Now, scroll down to the function you wrote to find the selected timezone. Using either conditionals or a switch statement, change the offset based on the timezone selected.  For example, if your computer is set to eastern standard time and the user selected pacific standard time, then you would set the offset to 3.
+Now, scroll down to the function you wrote to find the selected timezone. 
 
-Once you've set up your conditionals, revisit your function that sets your clock.  In the line where you define your variable that holds your current hour, add `+ offset` so that the offset is added to whatever hour your computer's clock is set to and then that new hour is saved to the hour variable.
+- Using either conditionals or a switch statement, change the offset based on the timezone selected.  
+  - For example, if your computer is set to eastern standard time and the user selected pacific standard time, then you would set the offset to 3.
+
+Once you've set up your conditionals, revisit your function that sets your clock.  
+
+- In the line where you define your variable that holds your current hour, add `+ offset` so that the offset is added to whatever hour your computer's clock is set to and then that new hour is saved to the hour variable.
 
 Finally, call the function that sets your clock at the end of your function that changes the timezone so that the time gets updated. Now, your clock should change when you select a timezone and hit submit.
 
