--- a/Slack-Apps/homework/responses/1.1-bolt-intro.md
+++ b/Slack-Apps/homework/responses/1.1-bolt-intro.md
@@ -1,4 +1,6 @@
-# Introduction to Bolt JS
+## Introduction to Bolt JS
+
+#### Learn what the Bolt Framework is and how to use it.
 
 Bolt JS is a framework, or a platform, for developing in JavaScript for Slack. Bolt **significantly** reduces the learning curve for Slack development by abstracting away some of the more complicated language barriers involved. In this issue, you will be familiarizing yourself with Bolt.
 
