--- a/Slack-Apps/homework/responses/1.2-bots-and-apps.md
+++ b/Slack-Apps/homework/responses/1.2-bots-and-apps.md
@@ -1,4 +1,6 @@
-# Bots and Apps
+## Slack Bots vs. Slack Apps
+
+#### Learn about the various types of Slack Apps you can make.
 
 Now that you better understand Bolt and Slack, it is time to learn about different types of projects we can build on Slack! This issue will cover the differences between a Slack **app** and a Slack **bot**. 
 
