--- a/Slack-Apps/homework/responses/1.3-setup-app-and-learn-events.md
+++ b/Slack-Apps/homework/responses/1.3-setup-app-and-learn-events.md
@@ -1,4 +1,6 @@
-# Setting up a Slack App
+## Config Setup and Event Listeners
+
+#### Setting up a text editor and using event listeners.
 
 Now that you have done some research on Slack development, its time to get building! In this issue, you will learn how to set up a Slack app.
 
