--- a/Slack-Apps/homework/responses/1.2-bots-and-apps.md
+++ b/Slack-Apps/homework/responses/1.2-bots-and-apps.md
@@ -1,4 +1,4 @@
-## Slack Bots vs. Slack Apps
+## Week 1: Slack Bots vs. Slack Apps
 
 #### Learn about the various types of Slack Apps you can make.
 
