--- a/Slack-Apps/homework/responses/1.4-basic-slack-app.md
+++ b/Slack-Apps/homework/responses/1.4-basic-slack-app.md
@@ -1,4 +1,6 @@
-# Coding an App
+## Week 1: Creating a Basic Slack App
+
+#### Use what you learned and make your first Slack App.
 
  You will be building your first app, which is a bot that listens for and responds to specific text in chats. If you are having trouble, refer to [this article](https://slack.dev/bolt-js/tutorial/getting-started#:~:text=%20Getting%20started%20with%20Bolt%20for%20JavaScript%20,handled%2C%20it%E2%80%99s%20time%20to%20set%20up...%20More%20%E2%80%A9https://slack.dev/bolt-js/tutorial/getting-started) as an example of another simple app. Make sure that your app is set up (ie. ngrok is installed and running, )
 
