--- a/Slack-Apps/homework/responses/2.1-blocks-and-actions.md
+++ b/Slack-Apps/homework/responses/2.1-blocks-and-actions.md
@@ -1,4 +1,6 @@
-# Block Kits and Actions
+## Week 2: Block Kits and Actions
+
+#### Introduction to BlockKits and Actions in the Slack API.
 
 Block Kits are a more advanced way of sending messages through an app. In this issue, you will build an app that uses block kits. to interact with users. 
 
