--- a/Slack-Apps/homework/responses/2.2-blocks-and-actions-app.md
+++ b/Slack-Apps/homework/responses/2.2-blocks-and-actions-app.md
@@ -1,4 +1,6 @@
-# Building an App with Block Kits and Actions 
+## Week 2: Building an App with Block Kits and Actions 
+
+#### Use BlockKits and Actions to make a Slack App.
 
 Now it's time to make a block kit yourself! Your goal will be to write an app that will listen for the word 'hello' in a workspace's channels, then respond in the same channel announcing that who person said hello. The message should include a block kit with a button saying 'click me'. If someone clicks the button, then the app announces that a person clicked the button in a regular message.
 
