--- a/Slack-Apps/homework/responses/2.3-commands-and-modals.md
+++ b/Slack-Apps/homework/responses/2.3-commands-and-modals.md
@@ -1,4 +1,6 @@
-# Commands and Modals
+## Week 2: Commands and Modals
+
+#### Introduction to Commands and Modals in the Slack API.
 
 In this issue, you will be learning about commands and modals. Commands are a shorthand way to perform an action in Slack. In order to invoke an app with a command, you just need to type '/' in a message field. Modals are another type of view that a Slack app can have. Read [this article](https://api.slack.com/surfaces/modals) to learn more about modals. 
 
