--- a/Slack-Apps/homework/responses/2.4-time-converter.md
+++ b/Slack-Apps/homework/responses/2.4-time-converter.md
@@ -1,4 +1,6 @@
-# Making a Time Converter
+## Time Converter Slack App
+
+#### Use what you learned to create a Time Converter Slack App.
 
 This issue will be a project that uses a slash command, modals, and block kits. Make an app that, when the right slash command is invoked, prompts the user for their timezone and hour and the timezone they would like to convert to. Afterwards, send them a message in the chat with the converted time. 
 
