--- a/Slack-Apps/homework/responses/2.4-time-converter.md
+++ b/Slack-Apps/homework/responses/2.4-time-converter.md
@@ -1,4 +1,4 @@
-## Time Converter Slack App
+## Week 2: Time Converter Slack App
 
 #### Use what you learned to create a Time Converter Slack App.
 
