--- a/Slack-Apps/homework/responses/3.1-reaction-event-listener-and-threads.md
+++ b/Slack-Apps/homework/responses/3.1-reaction-event-listener-and-threads.md
@@ -1,4 +1,6 @@
-# Google Translate API: Event Listener & Threads
+## Week 3: Google Translate API: Event Listener & Threads
+
+#### Introduction to a new event listener and responding in threads.
 
 During the livestream, you were introduced to two new concepts: a new event listener to emoji reactions and a new way of having your Slack App respond to a thread. In this issue, you will be incorportating these concepts as you integrate your Slack App with your first third party API, Google Translate!
 
