--- a/Slack-Apps/homework/responses/3.2-oauth-account-and-credentials.md
+++ b/Slack-Apps/homework/responses/3.2-oauth-account-and-credentials.md
@@ -1,4 +1,6 @@
-# Google Translate API: Account & Credentials
+## Week 3: Google Translate API: Account & Credentials
+
+#### Setting up a Google Developer Account and using the Translator.
 
 After setting up our event listener and making our Slack App respond in a thread, it's finally time to to integrate the Google Translate API.  Before we install the client libary and actually create the translation callback logic for our Slack App, we need to create an account and find our downloaded API token.
 
