--- a/Slack-Apps/homework/responses/3.3-calling-translator-api.md
+++ b/Slack-Apps/homework/responses/3.3-calling-translator-api.md
@@ -1,4 +1,6 @@
-# Google Translate API: Calling the Translator
+## Week 3: Google Translate API: Calling the Translator
+
+#### Integrating the Translator in a Slack App.
 
 You should now return to your ```app.js``` to implement adding Cloud Translation. In the livestream, you should have noticed the Slack App response was hardcoded to a phrase like "This is Spanish" or "This is Japanese". Now, we are going to be adding the response as the actual ```translated text``` in a thread.
 
