--- a/Slack-Apps/homework/responses/4.1-express.md
+++ b/Slack-Apps/homework/responses/4.1-express.md
@@ -1,4 +1,6 @@
-# ⚡️Express
+## Week 4: Introduction to Express
+
+#### Learn about ExpressJS and what it can do.
 
 This week will involve using a popular JavaScript framework called Express. Frameworks give you a fundamental structure that you can build on without starting completely from scratch. For example, Bolt is also a framework. 
 
