--- a/Slack-Apps/homework/responses/4.2-webhooks.md
+++ b/Slack-Apps/homework/responses/4.2-webhooks.md
@@ -1,4 +1,6 @@
-# Webhooks
+## Introduction to Webhooks
+
+#### Learn about what webhooks are and how to use them in a Slack App.
 
 Webhooks are applications that send other apps useful information. They are extremely useful and can expand your Slack apps to a new level! 
 
