--- a/Slack-Apps/homework/responses/4.3-final-project.md
+++ b/Slack-Apps/homework/responses/4.3-final-project.md
@@ -1,4 +1,6 @@
-# ✔️Final Project
+## Week 4: Final Project with Github API
+
+#### Finish up the course by creating your last Slack App with the Github API.
 
 Congratulations, you are about to complete your final homework assignment! It's time for you to apply the concepts from this week into a project. You will create an app that listens for Github comments and posts in the app's chat whenever this event occurs.
 
