--- a/Slack-Apps/homework/responses/1.3-setup-app-and-learn-events.md
+++ b/Slack-Apps/homework/responses/1.3-setup-app-and-learn-events.md
@@ -1,4 +1,4 @@
-## Week 1: Config Setup and Event Listeners
+## Config Setup and Event Listeners
 
 #### Setting up a text editor and using event listeners.
 
