--- a/Slack-Apps/homework/responses/2.2-blocks-and-actions-app.md
+++ b/Slack-Apps/homework/responses/2.2-blocks-and-actions-app.md
@@ -1,4 +1,4 @@
-## Week 2: Building an App with Block Kits and Actions 
+## Building an App with Block Kits and Actions 
 
 #### Use BlockKits and Actions to make a Slack App.
 
