--- a/Slack-Apps/homework/responses/3.1-reaction-event-listener-and-threads.md
+++ b/Slack-Apps/homework/responses/3.1-reaction-event-listener-and-threads.md
@@ -1,4 +1,4 @@
-## Week 3: Google Translate API: Event Listener & Threads
+## Google Translate API: Event Listener & Threads
 
 #### Introduction to a new event listener and responding in threads.
 
