--- a/Slack-Apps/homework/responses/3.2-oauth-account-and-credentials.md
+++ b/Slack-Apps/homework/responses/3.2-oauth-account-and-credentials.md
@@ -1,4 +1,4 @@
-## Week 3: Google Translate API: Account & Credentials
+## Google Translate API: Account & Credentials
 
 #### Setting up a Google Developer Account and using the Translator.
 
