--- a/Slack-Apps/homework/responses/3.3-calling-translator-api.md
+++ b/Slack-Apps/homework/responses/3.3-calling-translator-api.md
@@ -1,4 +1,4 @@
-## Week 3: Google Translate API: Calling the Translator
+## Google Translate API: Calling the Translator
 
 #### Integrating the Translator in a Slack App.
 
