--- a/Slack-Apps/homework/responses/4.3-final-project.md
+++ b/Slack-Apps/homework/responses/4.3-final-project.md
@@ -1,4 +1,4 @@
-## Week 4: Final Project with Github API
+## Final Project with Github API
 
 #### Finish up the course by creating your last Slack App with the Github API.
 
